# pybtc

./: .env.example  Dockerfile  README.md  analyze_gaps.py  diagnose.py  docker-compose.yml  pyproject.toml  setup_keys.py
clawbot/: clob_feed.py  config.py  daemon.py  executor.py  gap_engine.py  logger.py  market_discovery.py  risk.py  spot_feed.py
