[project]
name = "clawbot"
version = "1.0.0"
description = "Polymarket BTC 5-minute arbitrage daemon"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client>=0.18.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
clawbot = "clawbot.daemon:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
